카메라 권한을 얻을 다음에 카메라 실행 시키기

--- a/ch9_resource/src/main/res/values-ko-rKR/strings.xml
+++ b/ch9_resource/src/main/res/values-ko-rKR/strings.xml
@@ -11,4 +11,5 @@
     <string name="intro_more">더 알아보기</string>
     <string name="intro_button">설정</string>
     <string name="intro_delay">나중에 하기</string>
+    <string name="permission">권한 설정을 해주세요</string>
 </resources>
